# spring-26

students/aristakesyan-ta/: README.md  (+1 more)
students/ivanov-ms/lab2/: README.md  pyproject.toml
students/ivanov-ms/lab2/logs/: logs.txt
students/ivanov-ms/lab2/source/: main.py
students/ivanov-ms/lab2/source/data/: __init__.py  load_data.py  pipeline.py  process_data.py
students/ivanov-ms/lab2/source/models/: __init__.py  random_forest.py
students/ivanov-ms/lab2/source/utils/: __init__.py  plotting.py
students/ivanov-ms/lab5/: README.md  pyproject.toml
students/ivanov-ms/lab5/logs/: logs.txt
students/ivanov-ms/lab5/source/: main.py
students/ivanov-ms/lab5/source/data/: load_data.py  pipeline.py  process_data.py
students/ivanov-ms/lab5/source/models/: __init__.py  als.py  base.py  reference_als.py  reference_slim.py  slim.py
students/ivanov-ms/lab5/source/utils/: compare.py  metrics.py  plotting.py  slim_search_params.py  utils.py
students/pogribnyak-is/lab3/: README.md  main.py  pyproject.toml
students/pogribnyak-is/lab3/src/: boosting.py  data.py  evaluation.py  plots.py  stump.py
students/pogribnyak-is/lab4/: README.md  main.py  pyproject.toml
students/pogribnyak-is/lab4/src/: data.py  evaluation.py  gmm.py  plots.py
students/pogribnyak-is/lab5/: README.md  pyproject.toml
students/pogribnyak-is/lab5/src/: data.py  main.py  metrics.py  slim.py  svd_mf.py
students/tonka-pa/lab2/: .gitignore  README.md  main.py  pyproject.toml
students/tonka-pa/lab2/configs/: rf_best.yaml  rf_default.yaml  rf_many_trees.yaml  rf_oob_grid_search.yaml  rf_shallow.yaml
students/tonka-pa/lab2/src/: metrics.py  preprocess.py  random_forest.py  visualization.py
students/tonka-pa/lab2/src/experiments/: cli.py  config.py  runner.py  sklearn_baselines.py  tuning.py
students/tonka-pa/lab3/: .gitignore  README.md  pyproject.toml
students/tonka-pa/lab3/configs/: classification_default.yaml  classification_depth5.yaml  classification_lr03.yaml  classification_n50.yaml  classification_subsample.yaml  regression_default.yaml  regression_depth5.yaml  regression_lr03.yaml  regression_n50.yaml  regression_subsample.yaml
students/tonka-pa/lab3/results/experiments/classification_default/: cv_scores.md  metrics.md
students/tonka-pa/lab3/results/experiments/classification_depth5/: metrics.md
students/tonka-pa/lab3/results/experiments/classification_lr03/: metrics.md
students/tonka-pa/lab3/results/experiments/classification_n50/: metrics.md
students/tonka-pa/lab3/results/experiments/classification_subsample/: metrics.md
students/tonka-pa/lab3/results/experiments/regression_default/: cv_scores.md  metrics.md
students/tonka-pa/lab3/results/experiments/regression_depth5/: metrics.md
students/tonka-pa/lab3/results/experiments/regression_lr03/: metrics.md
students/tonka-pa/lab3/results/experiments/regression_n50/: metrics.md
students/tonka-pa/lab3/results/experiments/regression_subsample/: metrics.md
students/tonka-pa/lab3/src/: metrics.py  preprocess.py  visualization.py
students/tonka-pa/lab3/src/boosting/: __init__.py  gradient_boosting.py
students/tonka-pa/lab3/src/experiments/: cli.py  config.py  runner.py  sklearn_baselines.py
students/tonka-pa/lab4/: .gitignore  README.md  pyproject.toml
students/tonka-pa/lab4/configs/: classifier_gmm.yaml  density_default.yaml  density_diag.yaml  density_full.yaml  density_k_10.yaml  density_k_2.yaml  density_k_5.yaml  density_model_selection.yaml
students/tonka-pa/lab4/src/: metrics.py  preprocess.py  visualization.py
students/tonka-pa/lab4/src/experiments/: cli.py  config.py  model_selection.py  runner.py  sklearn_baselines.py
students/tonka-pa/lab4/src/gmm/: __init__.py  covariance.py  gaussian_mixture.py
(+611 files in other folders)
