[project]
name = "lab5"
version = "0.1.0"
description = "Лабораторная работа №5"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "implicit>=0.7.3",
    "kagglehub>=0.3.13",
    "matplotlib>=3.0.0",
    "numpy<2.0.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.5.0",
    "seaborn>=0.13.0",
    "tqdm>=4.67.3",
]
