[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "em-gmm-lab4"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.11",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "pandas>=2.0",
    "kagglehub>=0.3",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]
