[project]
name = "ml2sem5lab"
version = "0.1.0"
description = "Lab 5: Recommendation Systems (SLIM + SVD)"
requires-python = ">=3.11,<3.13"
dependencies = [
    "numpy>=1.26,<2.0",
    "pandas>=2.2",
    "scikit-learn>=1.4",
    "scikit-surprise>=1.1.3",
    "cornac>=1.18",
    "matplotlib>=3.8",
    "requests>=2.31",
    "tqdm>=4.66",
]

[tool.uv]
