[project]
name = "lab2"
version = "0.1.0"
description = "Random Forest laboratory project with OOB scoring and feature importance"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.0",
    "numpy>=2.2.0",
    "pandas>=2.2.0",
    "pyyaml>=6.0.2",
    "requests>=2.32.0",
    "rich>=13.9.0",
    "scikit-learn>=1.6.0",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "ruff>=0.8.0",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
