[project]
name = "lab3"
version = "0.1.0"
description = "Лабораторная работа №3. Градиентный бустинг"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.0",
    "numpy>=2.0.0",
    "pandas>=2.0.0",
    "pyyaml>=6.0.0",
    "rich>=13.0.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.0",
]

[dependency-groups]
dev = [
    "ruff>=0.5.0",
]

[tool.ruff]
line-length = 100
target-version = "py313"
